app/assets/stylesheets/application.scss
/* ... */
/* sub/cateogry image thumbnail size */
div.panel-body > a > img {
  width: 100%;
}

.show-box {
  font-size: 12px;
  width: 500px;
  max-width: 100%;
}

.grid-item {
  border-radius: 7px;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
  float: left;
  margin: 10px;
  width: 150px;

  .pin img {
    width: 200%;
    height: auto;
    border-radius: 7px;
  }

  .pin-content {
    font-size: 12px;
  }

  .name {
    font-size: 12px;
  }

  .board-name {
    color: #a4a4a4;
  }

  hr {
    display: block;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
  }
}

.row1 {
  margin-right: inherit;
  margin-left: inherit;
  padding: 0 20px 0 20px;
  margin-bottom: 1px;
}

.dropup-menu {
  -webkit-box-shadow: 0 0 12px rgba(0, 0, 0, 0.175);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.175);
  margin-top: 0;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  font-size: 11px;
}

/*Dropdown Submenus*/
.dropdown-submenu {
  position: relative;
}

.dropdown-submenu > .dropdown-menu {
  top: 0;
  left: 100%;
  margin-top: -6px;
  margin-left: -1px;
  -webkit-border-radius: 0 6px 6px 6px;
  -moz-border-radius: 0 6px 6px 6px;
  border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover > .dropdown-menu {
  display: block;
}

.dropdown-submenu > a:after {
  display: block;
  content: " ";
  float: right;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
  border-width: 5px 0 5px 5px;
  border-left-color: #cccccc;
  margin-top: 5px;
  margin-right: -10px;
}

.dropdown-submenu:hover > a:after {
  border-left-color: #5074a4;
}

.dropdown-submenu.pull-left {
  float: right;
}

.dropdown-submenu.pull-left > .dropdown-menu {
  left: -100%;
  margin-left: 10px;
  -webkit-border-radius: 6px 0 6px 6px;
  -moz-border-radius: 6px 0 6px 6px;
  border-radius: 6px 0 6px 6px;
}

.navbar-nav .li_no_bg .ts-copy {
  font-size: 12px;
  padding-bottom: 15px;
  padding-top: 17px;
  line-height: 20px;
  margin-left: 7px;
  margin-right: 7px;
  display: block;
  height: 30px;
}

@media (max-width: 767px) {
  .navbar-nav .open .dropdown-menu {
    position: inherit;
    float: inherit;
    width: inherit;
    margin-top: inherit;
    background-color: inherit;
    border: inherit;
    box-shadow: inherit;
    padding: 0px 25px;
  }
  .navbar-nav .open .dropdown-menu > li > a,
  .navbar-nav .open .dropdown-menu .dropdown-header {
    padding: 10px 0px;
  }
  .navbar-nav .open .dropdown-menu > li > a {
    line-height: inherit;
  }
  .navbar-nav .open .dropdown-menu > li > a:hover,
  .navbar-nav .open .dropdown-menu > li > a:focus {
    background-image: inherit;
  }
}

.clearfix:before,
.clearfix:after {
  content: "";
  display: table;
}

.clearfix:after {
  clear: both;
}

.clearfix {
  zoom: 1;
}

/*  SECTIONS  */

.section {
  clear: both;
  padding: 0px;
  margin: 0px;
}

/*  GROUPING  */

.group:before,
.group:after {
  content: "";
  display: table;
}

.group:after {
  clear: both;
}

.group {
  zoom: 1; /* For IE 6/7 (trigger hasLayout) */
}

/*  GRID COLUMN SETUP   ==================================================================== */

.col {
  display: block;
  float: right;
  margin: 1% 0 1% 1.6%;
}

.col:first-child {
  margin-left: 0;
} /* all browsers except IE6 and lower */

/*  USERNAME POST PAGE STYLE  */

.catg_title {
  font-size: 14px;
  font-family: Verdana, Arial, Helvetica, sans-serif;
  color: #707070;
  padding: 3px;
}

.category_title {
  font-size: 11px;
  font-weight: normal;
}

.category_title ul li a:hover {
  color: #fff; /* white */
  background-color: #3b7e3a; /* green */
  padding: 5px;
}

.price {
  font: Verdana, Arial, Helvetica, sans-serif;
  color: #3b7e3a;
  font-size: 14px;
}

.price1 {
  font: Verdana, Arial, Helvetica, sans-serif;
  color: #3b7e3a;
  font-size: 26px;
  padding: 3px;
  width: 150px;
}

.vertical-center {
  position: relative;
  top: 30%;
  a {
    text-decoration: none;
    &:hover {
      text-decoration: underline;
      color: purple;
    }
  }
}

.small-heading {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  margin: 0 0 8px;
  font-size: 11px;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.8);
}

.hero-description {
  width: 85%;
  font-size: 12px;
  font-weight: normal;
  line-height: 1.2;
  margin-top: 4px;
  color: #ffffff;
}

.hero-avatar {
  webkit-border-radius: 6px 0 6px 6px;
  moz-border-radius: 6px 0 6px 6px;
  border-radius: 6px 0 6px 6px;
  position: relative;
  width: 85px;
  height: 85px;
}

.avatar-image {
  border-radius: 50%;
}

.avatar {
  border-radius: 50%;
  width: 45px;
  height: 45px;
}

.pin-avatar {
  border-radius: 50%;
  width: 30px;
  height: 30px;
}

.button {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 11px;
  font-weight: bold;
  color: #5775ba;
  border: 1px solid;
  padding: 0.6em 1em 0.7em 1em;
  cursor: pointer;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.profile-info {
  max-width: 450px;
  width: 80%;
}

.comments {
  padding: 10px;
  border: 1px solid;
  border-color: #86c3ff;
  padding: 0.6em 1em 0.7em 1em;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  background-color: #f4f8fc;
  width: 450px;
}

.post-title {
  opacity: 1.4;
  font-size: 120%;
}

.post-metadata .post-info {
  padding-left: 10px;
  width: 100%;
}

.post-metadata {
  margin-top: 20px;
  display: flex;
}

/* `Clear Floated Elements
----------------------------------------------------------------------------------------------------*/

/* http://sonspring.com/journal/clearing-floats */

.clear {
  clear: both;
  display: block;
  overflow: hidden;
  visibility: hidden;
  width: 0;
  height: 0;
}
/* ... */

